# CppTool

./: .gitignore  CommonTool.h  MyPackage.sln  Pose.h  README.md  eskf.h  imu_tracker.cpp  imu_tracker.h  note.txt
Abandoned/: TimeTool.cpp
Slam/avp_mapping/src/: CMakeLists.txt
Slam/avp_mapping/src/avp_mapping/: avp_mapper_system.cc  bevtracker.cc  camera_parameter.cc  frame.cc  hpa_map.cc  keyframe.cc  optimizer.cc  system_config.cc  timer.cc  trajectory_log.cc  trajectory_smoother.cc  utils.cc
Slam/avp_mapping/src/feature_mapping/: basictool.cc  initializer.cc  keyframe.cc  keyframedatabase.cc  local_mapping.cc  map.cc  mcframe.cc  multicam_ext.cc  noncentral_relpose_solver.cc  orbextractor.cc  orbmatcher.cc  system.cc  tracking.cc
Slam/avp_mapping/src/message_filter/: message_filter.cc
Slam/myslam/: CMakeLists.txt
Slam/myslam/common/: EigenRotation.h  Pose.h  utility.h
Slam/myslam/imu/: ImuPreintegration copy.cpp  ImuPreintegration.cpp
Slam/myslam/imu/Sensor/: imu_tracker.cpp  imu_tracker.h
Slam/myslam/imu/eskf/: eskf.h  types.h  utils.h
Slam/myslam/imu/imu_filter/: complementary_filter.h
Slam/myslam/imu_filter/: complementary_filter.cpp  complementary_filter_ros.h
Slam/myslam/laser/: CloudDeskew.cpp  CornerSurfExtraction.cpp  CornerSurfIcp.cpp  EdgeSurfFeatureExtraction.cpp  LoopClosure.cpp  mapOptmization2.cpp
Slam/myslam/lidar_imu/: EdgeAndSurfFeatureExtraction.cpp  ImuPreintegration.cpp  LoopClosure.cpp
Slam/myslam/nonlinearOptimization/: FactorGraph.cpp
Slam/myslam/other/: featureExtractionROS.cpp  scan2map.cpp  scan2map.h
Slam/myslam/other/CornerSurfIcp/: CornerSurfIcp.cpp
Slam/myslam/other/imu_filter/: complementary_filter.cpp  complementary_filter.h
Slam/package/localization/: CMakeLists.txt  package.xml
Slam/package/localization/launch/: localization.launch  mapping.launch
Slam/package/localization/src/: localization_node.cpp  mapping_node.cpp
Slam/package/rf2o_laser_odometry/: CMakeLists.txt  package.xml
Slam/package/rf2o_laser_odometry/launch/: peter_laser_odometry.launch  rf2o_laser_odometry.launch
Slam/package/rf2o_laser_odometry/scripts/: test_track.py
Slam/package/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
Slam/package/rf2o_laser_odometry/srv/: track.srv
Slam/slambook/: CMakeLists.txt
Slam/slambook/1_camera/: CMakeLists.txt
Slam/slambook/1_camera/calibrationAndUndistort/: CMakeLists.txt  Readme.md  calibration.cpp  calibration.h  main.cpp  undistort.cpp
Slam/slambook/1_camera/rgbd/: CMakeLists.txt  joinMap.cpp
Slam/slambook/2_vo/: CMakeLists.txt
Slam/slambook/3_backend/: CMakeLists.txt
Slam/slambook/4_loop_closure/: CMakeLists.txt  gen_vocab_large.cpp  loop_closure.cpp
Slam/slambook/5_mapping/: CMakeLists.txt
Slam/slambook/6_my_slam/: CMakeLists.txt
Slam/slambook/base/: CMakeLists.txt
Slam/slambook/math_lib/: CMakeLists.txt
Slam/slambook/tool/: CMakeLists.txt  Histogram.hpp
Slam/slambook/vo/: CMakeLists.txt
Work/Eigen_Example/: CMakeLists.txt  Pose.cpp  SolveMatrix.cpp  SolveMatrix.h  main.cpp
Work/Eigen_Tool/: CMakeLists.txt  Common.cpp  EigenRotation.h  MatrixAndVector.cpp  MatrixAndVector.h  Pose.cpp  main.cpp
avp_mapping/: CMakeLists.txt  README.md
avp_mapping/config/: ViewerConfig.h.in
avp_mapping/config/mendeo3/: mendeo3_mapping_2020-08-13-10-31.cfg  mendeo3_mapping_2020-08-13-10-39.cfg
avp_mapping/demo/: CMakeLists.txt  localization_demo.cc  nm_feature_mapping.cc  transform_map.cc
avp_mapping/demo/mapviewer/: mapviewer.h
avp_mapping/doc/: feature_mapping.md  semantic_mapping.md
avp_mapping/include/avp_mapping/: avp_mapper_system.h  box.h  camera_parameter.h  keyframe.h  optimizer.h  semantic_element_def.h  system_config.h  timer.h  trajectory_log.h  trajectory_smoother.h  utils.h
avp_mapping/include/feature_mapping/: basictool.h  converter.h  frame.h  initializer.h  keyframe.h  local_mapping.h  map.h  map_alignment.h  mcframe.h  mckeyframe.h  multicam_ext.h  tracking.h  triangulator.h  types.h
avp_mapping/include/interface/: avp_mapping_interface.h  vslam_types.h
avp_mapping/include/message_filter/: message_filter.h
avp_mapping/include/viewer/: plot_viewer.h  simplecarmodel.h
avp_mapping/script/: show_odometry.py
avp_mapping/src/avp_mapping/: avp_mapper_system.cc  bevtracker.cc  camera_parameter.cc  frame.cc  hpa_map.cc  keyframe.cc  system_config.cc  timer.cc  trajectory_log.cc  trajectory_smoother.cc  utils.cc
avp_mapping/src/feature_mapping/: converter.cc  frame.cc  keyframedatabase.cc  local_mapping.cc  map_alignment.cc  mappoint.cc  mcframe.cc  mckeyframe.cc  multicam_ext.cc  noncentral_relpose_solver.cc
backup/front_camera_extrinsic_calibration/: CMakeLists.txt  README.md
backup/front_camera_extrinsic_calibration/cmake/: 3rdparty.cmake  SetBuildType.cmake
backup/front_camera_extrinsic_calibration/data/: adjustment_result.yaml  calibration_result.yaml  config.yaml  config_result.yaml
backup/front_camera_extrinsic_calibration/doc/: adjustment.md  calibration.md
backup/front_camera_extrinsic_calibration/include/: camera_calib_utils.h
backup/front_camera_extrinsic_calibration/samples/: CMakeLists.txt  front_camera_extrinsic_adjustment_sample.cpp  front_camera_extrinsic_calib_sample.cpp
backup/mono_intrinsic_calibration/: CMakeLists.txt  README.md
backup/mono_intrinsic_calibration/config/: config.cfg
backup/mono_intrinsic_calibration/include/: mono_intrinsic_interface.h
backup/mono_intrinsic_calibration/ldc_undistortion/: README.md  calib_results_tda4_mondeo1_left.txt  pinhole_undistortion_mesh.py
backup/mono_intrinsic_calibration/sample/: CMakeLists.txt  mono_intrinsic_calibration.cpp  view_undistorted.cpp
backup/mono_intrinsic_calibration/src/: fisheye.cpp  fisheye.h  model_base.cpp  model_base.h  model_factory.h  mono_intrinsic.cpp  mono_intrinsic.h  ocam.cpp  ocam.h  ocam_algrithom.cpp  ocam_algrithom.h  pinhole.cpp  pinhole.h
backup/stereo_camera/: CMakeLists.txt  README.md
backup/stereo_camera/scripts/: stereo_calib_build.sh
backup/stereo_camera/src/: stereo_calib.cpp  utils.cpp  utils.h
(+1238 files in other folders)
